--- a/.docker/conf/php/php.ini
+++ b/.docker/conf/php/php.ini
@@ -3,3 +3,6 @@ date.timezone = Europe/Paris
 display_errors = 1
 error_reporting = E_ALL
 memory_limit = 512M
+
+file_uploads = On
+upload_tmp_dir = /var/www/html/web/sites/default/files/tmp
