--- a/.env
+++ b/.env
@@ -15,3 +15,8 @@ DB_DRIVER=pgsql
 
 
 SONAR_LOGIN=sqp_abea744536a72429cfb6bc57905c0615def0af8b
+SOLR_TAG=8-4.18.2
+
+SOLR_CONFIG_SET="search_api_solr_4.1.6"
+ZOOKEEPER_TAG=3.8
+XHPROF_TAG=2-3.9.1
