--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,6 @@ services:
     ports:
       - 5432:5432
     volumes:
- #     - ./.docker/conf/postgres/:/docker-entrypoint-initdb.d/
       - postgres-data:/var/lib/postgresql/data
   traefik:
     image: traefik:v2.2
@@ -41,26 +40,10 @@ services:
       - "--accesslog.filePath=/logs/access.log"
     ports:
       - "${PROJECT_PORT}:80"
-     # - '8080:8080' # Dashboard
       - "443:443"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./logs/:/logs/
-  chrome:
-    image: selenium/standalone-chrome:3.141
-    container_name: "${PROJECT_NAME}_chrome"
-    volumes:
-      - /dev/shm:/dev/shm
-    ports:
-      - "4444:4444"
-    entrypoint:
-      - chromedriver
-      - "--no-sandbox"
-      - "--disable-dev-shm-usage"
-      - "--log-path=/tmp/chromedriver.log"
-      - "--verbose"
-      - "--whitelisted-ips="
-
   varnish:
     depends_on:
       - web
@@ -78,32 +61,29 @@ services:
       - redis:/bitnami/redis/data
     environment:
       ALLOW_EMPTY_PASSWORD: 'yes'
-
-
   sonarqube:
-      image: sonarqube:lts-community
-      depends_on:
-        - sonar_db
-      environment:
-        SONAR_JDBC_URL: jdbc:postgresql://sonar_db:5432/sonar
-        SONAR_JDBC_USERNAME: sonar
-        SONAR_JDBC_PASSWORD: sonar
-      volumes:
-        - sonarqube_conf:/opt/sonarqube/conf
-        - sonarqube_data:/opt/sonarqube/data
-        - sonarqube_extensions:/opt/sonarqube/extensions
-        - sonarqube_logs:/opt/sonarqube/logs
-        - sonarqube_temp:/opt/sonarqube/temp
-      ports:
-        - 9001:9000
-
-      labels:
-        - "traefik.http.routers.${PROJECT_NAME}_sonarqube.rule=Host(`sonarqube.${PROJECT_BASE_URL}`)"
-        - "traefik.http.services.${PROJECT_NAME}_sonarqube.loadbalancer.server.port=9000"
-      ulimits:
-        memlock:
-          soft: -1
-          hard: -1
+    image: sonarqube:lts-community
+    depends_on:
+      - sonar_db
+    environment:
+      SONAR_JDBC_URL: jdbc:postgresql://sonar_db:5432/sonar
+      SONAR_JDBC_USERNAME: sonar
+      SONAR_JDBC_PASSWORD: sonar
+    volumes:
+      - sonarqube_conf:/opt/sonarqube/conf
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_logs:/opt/sonarqube/logs
+      - sonarqube_temp:/opt/sonarqube/temp
+    ports:
+      - 9001:9000
+    labels:
+      - "traefik.http.routers.${PROJECT_NAME}_sonarqube.rule=Host(`sonarqube.${PROJECT_BASE_URL}`)"
+      - "traefik.http.services.${PROJECT_NAME}_sonarqube.loadbalancer.server.port=9000"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
   sonar_db:
     image: postgres:13
     environment:
@@ -119,6 +99,63 @@ services:
       - sonarqube
     volumes:
       - .:/usr/src
+  ftpd-server:
+    image: stilliard/pure-ftpd:hardened
+    ports:
+      - "21:21"
+      - "30000-30009:30000-30009"
+    volumes:
+      - './ftp/data:/home/username/'
+      - './ftp/pass:/etc/pure-ftpd/passwd'
+    environment:
+      FTP_USER_NAME: "username"
+      FTP_USER_PASS: "changeme!"
+      FTP_USER_HOME: "/home/username"
+    restart: always
+
+  filebrowser:
+    image: filebrowser/filebrowser
+    container_name: filebrowser
+    environment:
+      PUID: 1000
+      PGID: 1000
+    ports:
+      - "8080:80"
+    volumes:
+      - ./ftp/data:/srv
+    labels:
+      - "traefik.http.routers.${PROJECT_NAME}_filebrowser.rule=Host(`filebrowser.${PROJECT_BASE_URL}`)"
+    restart: unless-stopped
+
+  solr:
+    image: wodby/solr:$SOLR_TAG
+    container_name: "${PROJECT_NAME}_solr"
+    environment:
+      SOLR_DEFAULT_CONFIG_SET: $SOLR_CONFIG_SET
+      ZK_HOST: zookeeper:2181
+      SOLR_HEAP: 1024m
+    depends_on:
+    - zookeeper
+    labels:
+    - "traefik.http.services.${PROJECT_NAME}_solr.loadbalancer.server.port=8983"
+    - "traefik.http.routers.${PROJECT_NAME}_solr.rule=Host(`solr.${PROJECT_BASE_URL}`)"
+
+  zookeeper:
+    image: zookeeper:$ZOOKEEPER_TAG
+    container_name: "${PROJECT_NAME}_zookeeper"
+    environment:
+      ZOO_MY_ID: 1
+      ZOO_SERVERS: server.1=zookeeper:2888:3888;2181
+      ZOO_4LW_COMMANDS_WHITELIST: mntr, conf, ruok
+  xhprof:
+    image: wodby/xhprof:$XHPROF_TAG
+    container_name: "${PROJECT_NAME}_xhprof"
+    restart: always
+    volumes:
+    - files:/mnt/files
+    labels:
+    - "traefik.http.routers.${PROJECT_NAME}_xhprof.rule=Host(`xhprof.${PROJECT_BASE_URL}`)"
+
 volumes:
   postgres-data: {}
   redis: {}
@@ -129,3 +166,4 @@ volumes:
   sonarqube_temp:
   sonar_db:
   sonar_db_data:
+  files:
